--- a/style.css
+++ b/style.css
@@ -19,10 +19,17 @@
 }
 
 .btw {
-    padding: 16px 12px;
-    
+    padding: 12px 16px;
+    color: white;
+    font-weight: 600;
+    font-size: 16px;
     justify-content: center;
     align-items: center;
+    gap: 4px;
+    border-radius: 10000px;
+    background-image: linear-gradient( 48deg, #F7E93F , #FB09B4 ,  #9100F8) ;
+    border: none;
+    cursor: pointer;
 }
 
 
@@ -31,24 +38,15 @@
 .navbar {
     max-width: 1600px;
     justify-content: space-around;
-    padding: 30px 0;
+    padding: 16px 0;
     background-color: #1A0B2E;
     align-items: center;
     
 }
-.brand {
-    color: white;
-    font-size: 40px;
-}
 
 .nav-link {
-    gap: 32px;
-
-}
-
-.nav-item {
     list-style: none;
-
+    gap: 32px;
 
 }
 
@@ -59,4 +57,15 @@
     line-height: 120%;
     opacity: 90%;
     color: white;
+}
+
+/* banner styles */
+.banner {
+    background-image: url(./images/hero-bg.png);
+    background-size: contain;
+    background-position: center;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    /* padding: 101px 0; */
 }
