--- a/style.css
+++ b/style.css
@@ -35,11 +35,16 @@
 
 
 /* navbar styles */
+header {
+    background-color: #1A0B2E;
+}
+header hr {
+    max-width: 1600px;
+}
 .navbar {
     max-width: 1600px;
     justify-content: space-around;
-    padding: 16px 0;
-    background-color: #1A0B2E;
+    padding: 30px 0;
     align-items: center;
     
 }
@@ -62,10 +67,45 @@
 /* banner styles */
 .banner {
     background-image: url(./images/hero-bg.png);
-    background-size: contain;
+    background-repeat: no-repeat;
+    background-size: cover;
     background-position: center;
+    width: 100%;
     height: 100vh;
+    text-align: center;
     justify-content: center;
     align-items: center;
+    max-width: 1600px;
     /* padding: 101px 0; */
+
+}
+
+.hero-img {
+    margin: 0 auto;
+    justify-content: center;
+    align-content: center;
+}
+.hero-img img {
+    max-width: 100%;
+    height: auto;
+}
+
+.banner-text {
+    padding-top: 40px;
+}
+.banner-text h2 {
+    font-weight: 800;
+    font-size: 60px;
+    color: white;
+}
+.banner-text p {
+    padding-top: 8px;
+    opacity: 80%;
+    color: white;
+}
+.banner-btw {
+    padding-top: 24px;
+    gap: 8px;
+    justify-content: center;
+    align-items: center;
 }
