--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     font-size: 16px;
     justify-content: center;
     align-items: center;
-    gap: 4px;
+    gap: 7px;
     border-radius: 10000px;
     background-image: linear-gradient( 48deg, #F7E93F , #FB09B4 ,  #9100F8) ;
     border: none;
@@ -40,6 +40,7 @@ header {
 }
 header hr {
     max-width: 1600px;
+    opacity: 20%;
 }
 .navbar {
     max-width: 1600px;
@@ -71,7 +72,7 @@ header hr {
     background-size: cover;
     background-position: center;
     width: 100%;
-    height: 100vh;
+    height: 760px;
     text-align: center;
     justify-content: center;
     align-items: center;
@@ -81,13 +82,22 @@ header hr {
 }
 
 .hero-img {
+    position: relative;
     margin: 0 auto;
     justify-content: center;
     align-content: center;
+    max-width: 350px;
+    max-height: 350px;
 }
 .hero-img img {
     max-width: 100%;
     height: auto;
+}
+.microphone{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .banner-text {
@@ -108,4 +118,29 @@ header hr {
     gap: 8px;
     justify-content: center;
     align-items: center;
+}
+.btw-2 {
+    padding: 12px 16px;
+    color: #00FF88;
+    font-weight: 600;
+    font-size: 16px;
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    border-radius: 10000px;
+    border: 1.5px solid #00FF88;
+    cursor: pointer;
+    background-color: transparent;
+}
+.new-btw {
+    padding: 8px 16px;
+    background-color: #00FF88;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 1000px;
+    box-shadow: 0px 3px 27px 0px rgba(0, 255, 136, 0.5) ;
+    position: absolute;
+    top: 5%;
+    left: 75%;
+    color: #1A0B2E;
 }
