--- a/style.css
+++ b/style.css
@@ -40,12 +40,12 @@ header {
 }
 header hr {
     max-width: 1600px;
-    opacity: 20%;
+    opacity: 10%;
 }
 .navbar {
     max-width: 1600px;
     justify-content: space-around;
-    padding: 30px 0;
+    padding: 22px 0;
     align-items: center;
     
 }
@@ -143,4 +143,95 @@ header hr {
     top: 5%;
     left: 75%;
     color: #1A0B2E;
+}
+
+/* about section styles */
+.about-container {
+    text-align: center;
+    padding-top: 50px;
+    color: white;
+    background-color: #1A0B2E;
+
+}
+.about-text h2 {
+    font-size: 48px;
+    /* font-weight: 700; */
+}
+.about-text p {
+    padding-top: 16px;
+    font-size: 16px;
+    line-height: 2;
+    opacity: 80%;
+}
+.about-container hr {
+    max-width: 1200px;
+    opacity: 10%;
+    margin: 80px auto;
+}
+.merit-comtent {
+    max-width: 1200px;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 auto;
+    padding-bottom: 120px;
+}
+
+.merits h2 {
+    font-size: 48px;
+    font-weight: 900;
+    color: #00FF88;
+}
+.merits p {
+    padding-top: 10px;
+    opacity: 80%;
+    line-height: 20px;
+}
+ /* why choose section */
+.why-choose {
+    background-color: #230E3D;
+    padding: 120px 0;
+}
+.why-choose h2 {
+    text-align: center;
+    font-size: 48px;
+    color: white;
+    padding-bottom: 40px;
+}
+.card-container {
+    display: grid;
+    /* gap: 30px; */
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.audeo {
+    grid-row: span 2;
+}
+.mobile, .community, .interviews{
+    grid-column: span 2;
+}
+
+.why-choose-card {
+    max-width: 1200px;
+    padding: 40px;
+    background-color: rgba(53, 17, 101, 0.4) ;
+    border-radius: 40px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    color: white;
+    margin: 15px;
+}
+
+.why-choose-card h3 {
+    padding: 16px 0;
+    font-size: 24px;
+    text-align: center;
+}
+.why-choose-card p {
+    opacity: 60%;
+    font-size: 16px;
+    line-height: 24px;
 }
