--- a/style.css
+++ b/style.css
@@ -235,3 +235,58 @@ header hr {
     font-size: 16px;
     line-height: 24px;
 }
+
+/* featured section */
+
+.card-host {
+    background-color: #1A0B2E;
+    padding: 120px 0;
+}
+
+.featured-container h2 {
+    font-size: 48px;
+    color: white;
+    text-align: center;
+}
+.video-card-container {
+    padding: 40px 15px 0;
+    max-width: 1200px;
+    gap: 30px;
+    margin: 0 auto;
+    height: auto;
+
+}
+.featured-card {
+    border-radius: 20px;
+    background-color: #250D44;
+    /* border: 1px solid red; */
+}
+.featured-card iframe {
+    border-radius: 20px 20px 0 0;
+    width: 100%;
+    height: 214px;
+}
+.card-text {
+    height: 50%;
+    padding: 24px;
+    color: white;
+}
+.featured-card h3 {
+    font-size: 24px;
+}
+.featured-card p {
+    padding-top: 12px;
+    font-size: 16px;
+    line-height: 24px;
+    opacity: 60%;
+}
+.video-time { 
+    display: flex;
+    gap: 6px;
+    justify-content:flex-start;
+    align-items: center ;
+    padding-top: 12px;
+}
+.video-time span {
+    color: #00FF88;
+}
