--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ header hr {
 }
 .about-text h2 {
     font-size: 48px;
-    /* font-weight: 700; */
+
 }
 .about-text p {
     padding-top: 16px;
@@ -259,7 +259,7 @@ header hr {
 .featured-card {
     border-radius: 20px;
     background-color: #250D44;
-    /* border: 1px solid red; */
+
 }
 .featured-card iframe {
     border-radius: 20px 20px 0 0;
@@ -332,3 +332,44 @@ header hr {
     justify-content: center;
     align-items: center;
 }
+/* footer styles */
+footer {
+    background-image: url(./images/footer-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 412px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    max-width: 1600px;
+}
+.footer-container {
+    max-width: 1200px;
+    color: white;
+    margin: 0 auto;
+}
+.footer-content {
+    justify-content: center;
+    align-items: center;
+    padding: 32px 0;
+    gap: 40px;
+}
+.footer-icon {
+    display: flex;
+    align-items: center;
+    gap:9px;
+}
+.footer-container span {
+    opacity: 60%;
+    font-weight: 500;
+}
+.footer-container p {
+    opacity: 60%;
+    line-height: 24px;
+}
+
+
+/* responsive styles */
+
