--- a/style.css
+++ b/style.css
@@ -150,9 +150,16 @@ header hr {
     border-radius: 1000px;
     box-shadow: 0px 3px 27px 0px rgba(0, 255, 136, 0.5) ;
     position: absolute;
+    animation-name: newAnimation;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
     top: 5%;
     left: 75%;
     color: #1A0B2E;
+}
+@keyframes newAnimation {
+    0%    {background-color: #00FF88; padding: 6px 12px; box-shadow: 0px 3px 27px 0px rgba(0, 255, 136, 0.5) ;}
+    100%  {background-color: #3feb9a; padding: 8px 16px; box-shadow: 0px 3px 35px 0px rgba(43, 129, 89, 0.5) ;}
 }
 
 /* about section styles */
@@ -478,6 +485,10 @@ footer {
     .why-choose-card {
         max-width: 100vw;
         padding: 24px;
+    }
+    .why-choose-card h3 {
+    font-size: 22px;
+    text-align: start;
     }
 
     /* featured & host section */
