--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ header hr {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    width: 100vw;
+    width: 100%;
     height: 760px;
     text-align: center;
     justify-content: center;
